[gd_scene load_steps=10 format=3 uid="uid://djnlisddklqut"]

[ext_resource type="FontFile" uid="uid://cw2r0dkfbk2et" path="res://assets/kenney_ui-pack-space-expansion (1)/Font/Kenney Future.ttf" id="1_dlm01"]
[ext_resource type="Script" uid="uid://2uii8muuka6p" path="res://scenes/time_menu.gd" id="1_dmry5"]
[ext_resource type="AudioStream" uid="uid://dnx53016nmfdd" path="res://assets/sounds/menu-53679.mp3" id="3_fau2n"]
[ext_resource type="Texture2D" uid="uid://djxpvf68qu6u5" path="res://assets/free-pixel-art-cloud-and-sky-backgrounds/3. NEW CLOUDS/1.png" id="3_li6ug"]
[ext_resource type="Texture2D" uid="uid://coo777suw6ahw" path="res://assets/free-pixel-art-cloud-and-sky-backgrounds/3. NEW CLOUDS/2.png" id="4_fau2n"]
[ext_resource type="Texture2D" uid="uid://gkg50nfspsne" path="res://assets/free-pixel-art-cloud-and-sky-backgrounds/3. NEW CLOUDS/6.png" id="5_xbjqa"]
[ext_resource type="Texture2D" uid="uid://cs3l2naofxakj" path="res://assets/free-pixel-art-cloud-and-sky-backgrounds/3. NEW CLOUDS/5.png" id="6_ixtev"]
[ext_resource type="Texture2D" uid="uid://8jotr8022jkq" path="res://assets/free-pixel-art-cloud-and-sky-backgrounds/3. NEW CLOUDS/4.png" id="7_bjjg3"]

[sub_resource type="Theme" id="Theme_efwpb"]
default_font = ExtResource("1_dlm01")

[node name="time_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_efwpb")
script = ExtResource("1_dmry5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.0
offset_top = -20.0
offset_right = 193.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(191, 21.5)
theme_override_constants/separation = 100

[node name="play" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="play2" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="play3" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="HBoxContainer"]
stream = ExtResource("3_fau2n")
autoplay = true
attenuation = 1e-05
parameters/looping = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 408.0
offset_top = 210.0
offset_right = 740.0
offset_bottom = 250.0
scale = Vector2(2.25, 2.25)
pivot_offset = Vector2(156.444, 20.8889)
theme_override_constants/separation = 98

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "60s"

[node name="Label2" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "120s"

[node name="Label3" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "180s"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1066.0
offset_top = 586.0
offset_right = 1116.0
offset_bottom = 617.0
text = "BACK"

[node name="1" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(583, 331)
scale = Vector2(2.06597, 2.08025)
texture = ExtResource("3_li6ug")

[node name="2" type="Sprite2D" parent="."]
position = Vector2(921, 156)
texture = ExtResource("4_fau2n")

[node name="6" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(601, 307.5)
scale = Vector2(2.24653, 2.16975)
texture = ExtResource("5_xbjqa")

[node name="5" type="Sprite2D" parent="."]
position = Vector2(97, 148)
texture = ExtResource("6_ixtev")

[node name="4" type="Sprite2D" parent="."]
position = Vector2(891, 135)
texture = ExtResource("7_bjjg3")

[connection signal="pressed" from="HBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="HBoxContainer/play2" to="." method="_on_play_2_pressed"]
[connection signal="pressed" from="HBoxContainer/play3" to="." method="_on_play_3_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
